--- a/about.html
+++ b/about.html
@@ -2,3 +2,4 @@ teste 1 do github.
 <h1>ola, este arquivo e do github</h1>
 <p> testando git</p>
 <h3>enviando funcionalidade</h3>
+<p>enviando funcionalidade 3</p>
